# armos

./: .gitignore  Cargo.toml  README.md
extract-assets/: Cargo.toml
extract-assets/src/: addr.rs  display_list.rs  dlist.rs  main.rs  mesh.rs  rom.rs  skeleton.rs  skeleton_animation.rs  skin.rs
extract-assets/src/dlist/: gltf.rs
extract-assets/src/n64/: math.rs
extract-assets/src/skeleton/: gltf.rs
extract-assets/src/skin/: gltf.rs  skeleton.rs
