[package]
name = "extract-assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
base64 = "0.13.1"
bytemuck = { version = "1", features = ["derive"] }
byteorder = "1"
glob = "0.3"
gltf = "1.0.0"
log = "0.4"
pretty_env_logger = "0.4"
